2022-03-17  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add arguments
        'streaks.up.labels.col' and 'streaks.down.labels.col'

2022-01-27  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (last.format): add rudimentary
        support for numeric t, such as  integers 1, 2, ...

2021-12-03  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument
        'labels.at.offset'

2021-11-26  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add
        argument 'last.format', which is either NULL or
        a function to be called on the 'last' part of
        the label

2021-11-25  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add
        argument 'type'

2021-11-23  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument
        'do.scale1', with default to TRUE, for
        optionally switching off scaling

        * R/plotseries.R (plotseries): support 'lwd'
        with length > 1

2021-08-17  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): add arguments
        'median.show' and 'median.col', which have an effect
        for fan and quantile plots

2021-07-06  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): new series.type "quantile"
        (plotseries): rename argument 'fan.probs' to
        'probs', as it is also used for series.type
        "quantile"

2021-05-04  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): support argument
        'y.grid.at'

2020-02-13  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add arguments
        for styling streaks charts

2020-01-06  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add 'series.type' "streaks"
